// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoPicker test render test render with previewSrc 1`] = `
<FormSection
  theme={
    Object {
      "a": Object {},
      "actionRow": Object {},
      "amazonSignInButton": Object {},
      "button": Object {},
      "container": Object {},
      "facebookSignInButton": Object {},
      "formContainer": Object {},
      "formField": Object {},
      "formRow": Object {},
      "formSection": Object {},
      "googleSignInButton": Object {},
      "hint": Object {},
      "input": Object {},
      "inputLabel": Object {},
      "label": Object {},
      "nav": Object {},
      "navBar": Object {},
      "navButton": Object {},
      "navItem": Object {},
      "navRight": Object {},
      "oAuthSignInButton": Object {},
      "photoPickerButton": Object {},
      "photoPlaceholder": Object {},
      "radio": Object {},
      "sectionBody": Object {},
      "sectionFooter": Object {},
      "sectionFooterPrimaryContent": Object {},
      "sectionFooterSecondaryContent": Object {},
      "sectionHeader": Object {},
      "signInButton": Object {},
      "signInButtonContent": Object {},
      "signInButtonIcon": Object {},
      "strike": Object {},
      "strikeContent": Object {},
      "toast": Object {},
    }
  }
>
  <SectionHeader
    hint="Add your photos by clicking below"
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    Photos
  </SectionHeader>
  <SectionBody
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    The image has been selected
  </SectionBody>
  <Picker
    accept="image/*"
    onPick={[Function]}
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
    title="Select a Photo"
  />
</FormSection>
`;

exports[`PhotoPicker test render test render without previewSrc 1`] = `
<FormSection
  theme={
    Object {
      "a": Object {},
      "actionRow": Object {},
      "amazonSignInButton": Object {},
      "button": Object {},
      "container": Object {},
      "facebookSignInButton": Object {},
      "formContainer": Object {},
      "formField": Object {},
      "formRow": Object {},
      "formSection": Object {},
      "googleSignInButton": Object {},
      "hint": Object {},
      "input": Object {},
      "inputLabel": Object {},
      "label": Object {},
      "nav": Object {},
      "navBar": Object {},
      "navButton": Object {},
      "navItem": Object {},
      "navRight": Object {},
      "oAuthSignInButton": Object {},
      "photoPickerButton": Object {},
      "photoPlaceholder": Object {},
      "radio": Object {},
      "sectionBody": Object {},
      "sectionFooter": Object {},
      "sectionFooterPrimaryContent": Object {},
      "sectionFooterSecondaryContent": Object {},
      "sectionHeader": Object {},
      "signInButton": Object {},
      "signInButtonContent": Object {},
      "signInButtonIcon": Object {},
      "strike": Object {},
      "strikeContent": Object {},
      "toast": Object {},
    }
  }
>
  <SectionHeader
    hint="Add your photos by clicking below"
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    Photos
  </SectionHeader>
  <SectionBody
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
  >
    <PhotoPlaceholder
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "amazonSignInButton": Object {},
          "button": Object {},
          "container": Object {},
          "facebookSignInButton": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "googleSignInButton": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "label": Object {},
          "nav": Object {},
          "navBar": Object {},
          "navButton": Object {},
          "navItem": Object {},
          "navRight": Object {},
          "oAuthSignInButton": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
          "toast": Object {},
        }
      }
    />
  </SectionBody>
  <Picker
    accept="image/*"
    onPick={[Function]}
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "amazonSignInButton": Object {},
        "button": Object {},
        "container": Object {},
        "facebookSignInButton": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "googleSignInButton": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "label": Object {},
        "nav": Object {},
        "navBar": Object {},
        "navButton": Object {},
        "navItem": Object {},
        "navRight": Object {},
        "oAuthSignInButton": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
        "toast": Object {},
      }
    }
    title="Select a Photo"
  />
</FormSection>
`;
